# TestExercises

./: CMakeLists.txt  Source_inclusion.cpp  Source_inclusion.h  automata.cpp  automata.h  basic_concepts.cpp  basic_concepts.h  bitFields.cpp  cmakelists  def&odr.cpp  def&odr.h  feladat2.c  feladat3.c  feladat4.c  main.c  main.cpp  matrix.h  matrix_Test.cpp  memoryAllocation.cpp  test1.cpp
Google_tests/: CMakeLists.txt  test1.cpp
Google_tests/lib/googletest-main/: CMakeLists.txt
feladat1/: CMakeLists.txt  gauss_eliminacio.c  gauss_eliminacio.h  program1.c
hdr/: CMakeLists.txt  bitFields.h  expressions.h  memoryAllocation.h
release/: CMakeLists.txt
src/: CMakeLists.txt  Source_inclusion.cpp  basic_concepts.cpp  bitFields.cpp  declarations.cpp  def&odr.cpp  main.cpp  memoryAllocation.cpp
tst/: CMakeLists.txt  test1.cpp
